tests/ui/specialization/min_specialization/specialize_with_generalize_lifetimes.stderr
error[E0477]: the type `&'a i32` does not fulfill the required lifetime
  --> $DIR/specialize_with_generalize_lifetimes.rs:20:1
   |
LL | impl<'a> Tr for &'a i32 {
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/specialize_with_generalize_lifetimes.rs:12:15
   |
LL | impl<T: Any + 'static> Tr for T {
   |               ^^^^^^^

error[E0477]: the type `Wrapper<'a>` does not fulfill the required lifetime
  --> $DIR/specialize_with_generalize_lifetimes.rs:31:1
   |
LL | impl<'a> Tr for Wrapper<'a> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: type must satisfy the static lifetime as required by this binding
  --> $DIR/specialize_with_generalize_lifetimes.rs:12:15
   |
LL | impl<T: Any + 'static> Tr for T {
   |               ^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0477`.
